--- a/second.html
+++ b/second.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="lib/nprogress/nprogress.css">
+    <link rel="stylesheet" href="lib/bootstrap-validator/css/bootstrapValidator.min.css">
+
     <link rel="stylesheet" href="css/common.css">
 
     <title>乐淘首页</title>
@@ -44,15 +46,179 @@
             <a href="" class="pull-right "><i class="glyphicon glyphicon-log-out"></i></a>
         </div>
         <div class="main">
+            <div class="container-fluid">
+                <ol class="breadcrumb mt_20">
+                    <li><a href="#">管理系统</a></li>
+                    <li class="active">分类管理</li>
+                    <li class="active">二级分类</li>
+                </ol>
+                <div class="content">
+                    <button class="btn btn-btn btn-default btn-add">添加分类</button>
+                    <table class="table table-hover table-bordered mt_20">
+                        <thead>
+                            <tr>
+                                <th width="10%" class="text-center">序号</th>
+                                <th width="30%" class="text-center">一级分类名称</th>
+                                <th width="30%" class="text-center">二级分类名称</th>
+                                <th width="30%" class="text-center">二级分类LOGO</th>
+                            </tr>
 
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                    <div class="pull-right">
+                        <ul id="pagintor"></ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
+    <div class="modal fade" tabindex="-1" id="addmodal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">添加分类</h4>
+                </div>
+
+                <div class="modal-body">
+                    <form id="form">
+                        <div class="form-group">
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+                                    <span id="dropdownText">请选择一级分类</span>
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <!-- 刨个坑 -->
+                                </ul>
+                            </div>
+
+                            <input type="hidden" name="categoryId">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="请输入二级分类" name="brandName">
+                        </div>
+                        <div class="form-group">
+                            <label class="btn btn-default" for="fileupload">上传图片</label>
+                            <!-- 注意:
+                                    1. 指定name用于让后台获取图片, 所以不能乱写
+                                    2. 指定data-url, 指定接口地址
+                            -->
+                            <input type="file" name="pic1" data-url="/category/addSecondCategoryPic" id="fileupload"
+                                style="display: none;">
+                        </div>
+                        <div class="form-group" id="imgBox">
+                            <img src="images/default.png" width="100">
+                            <!-- 图片地址 -->
+                            <input type="hidden" name="brandLogo">
+                        </div>
+                    </form>
+                </div>
+
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="submit" class="btn btn-primary btn-sure" form="form">添加</button>
+                </div>
+
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+    <script type="text/html" id="tmp">
+        {{each rows v i}}
+        <tr>
+                <td class="text-center" style="vertical-align:middle">{{i+1+(page-1)*size}}</td>
+                <td class="text-center" style="vertical-align:middle">{{v.categoryName}}</td>
+                <td class="text-center" style="vertical-align:middle">{{v.brandName}}</td>
+                <td class="text-center" ><img src="{{v.brandLogo
+                }}" alt="" style="height:50px"></td>
+            </tr>
+            {{/each}}
+    </script>
+
+    <script type="text/html" id="tmp1">
+        {{each rows v i}}
+        <li><a href="#">{{v.categoryName}}</a></li>
+            {{/each}}
+    </script>
+
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="js/isLogin.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/nprogress/nprogress.js"></script>
+    <script src="lib/artTemplate/template-web.js"></script>
+    <script src="lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+    <script src="lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
     <script src="js/common.js"></script>
     <script src="js/index.js"></script>
+    <script>
+        $(function () {
+            var currentPage = 1;
+            var pageSize = 5;
+            render();
+            function render() {
+                $.ajax({
+                    url: '/category/querySecondCategoryPaging',
+                    data: {
+                        page: currentPage,
+                        pageSize: pageSize
+                    },
+                    dataType: 'json',
+                    success: function (res) {
+                        var htmlstr = template('tmp', res);
+                        $('tbody').html(htmlstr);
+
+                        $("#pagintor").bootstrapPaginator({
+                            bootstrapMajorVersion: 3,//默认是2，如果是bootstrap3版本，这个参数必填
+                            currentPage: currentPage,//当前页
+                            totalPages: Math.ceil(res.total / res.size),
+                            size: "small",//设置控件的大小，mini, small, normal,large
+                            onPageClicked: function (a, b, c, page) {
+                                currentPage = page;
+                                render();
+
+                            }
+                        });
+                    }
+                })
+            }
+
+            $('.btn-add').click(function () {
+                $('#addmodal').modal('show');
+                $.ajax({
+                    url: '/category/queryTopCategoryPaging',
+                    data: {
+                        page: 1,
+                        pageSize: 100
+                    },
+                    dataType: 'json',
+                    success: function (res) {
+                        var htmlstr = template('tmp1', res);
+                        $(".dropdown-menu").html(htmlstr);
+
+
+                    }
+                })
+            })
+
+            $('.dropdown-menu').on('click', 'a', function () {
+                var txt = $(this).text();
+                console.log(txt);
+
+                // 拿到 categoryId
+                // var id = $(this).data("id");
+
+                // 修改文本内容
+                $('#dropdownText').text(txt);
+            })
+
+        })
+
+    </script>
 </body>
 
 </html>
