--- a/product.html
+++ b/product.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="lib/nprogress/nprogress.css">
+    <link rel="stylesheet" href="lib/bootstrap-validator/css/bootstrapValidator.min.css">
+    <link rel="stylesheet" href="css/product.css">
     <link rel="stylesheet" href="css/common.css">
 
     <title>乐淘首页</title>
@@ -32,7 +34,7 @@
                         <a href="second.html">二级分类</a>
                     </div>
                 </li>
-                <li><a href="product.html"  class="now"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
+                <li><a href="product.html" class="now"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
 
             </ul>
         </div>
@@ -44,15 +46,372 @@
             <a href="" class="pull-right "><i class="glyphicon glyphicon-log-out"></i></a>
         </div>
         <div class="main">
+            <div class="container-fluid">
+                <ol class="breadcrumb mt_20">
+                    <li><a href="#">管理系统</a></li>
+                    <li class="active">商品管理</li>
 
+                </ol>
+                <div class="content">
+                    <button class="btn btn-btn btn-default btn-add">添加商品</button>
+                    <table class="table table-hover table-bordered mt_20">
+                        <thead>
+                            <th width="10%">序号</th>
+                            <th width="25%">商品名称</th>
+                            <th width="25%">商品描述</th>
+                            <th width="10%">商品库存</th>
+                            <th width="10%">商品尺寸</th>
+                            <th width="10%">商品状态</th>
+                            <th width="10%">操作</th>
+
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                    <div class="pull-right">
+                        <ul id="pagintor"></ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
+    <div class="modal fade" tabindex="-1" id="addmodal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">添加商品</h4>
+                </div>
+
+                <div class="modal-body">
+                    <form id="form">
+                        <div class="form-group">
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+                                    <span id="dropdownText">请选择二级分类</span>
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <!-- 刨个坑 -->
+                                </ul>
+                            </div>
+
+                            <input type="hidden" name="brandId">
+                        </div>
+                        <!-- 商品名称 -->
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="请输入商品名称" name="proName">
+                        </div>
+
+                        <!-- 商品描述 -->
+                        <div class="form-group">
+                            <textarea class="form-control" rows="3" name="proDesc" placeholder="请输入商品描述"></textarea>
+                        </div>
+
+
+                        <!-- 商品库存 -->
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="请输入商品库存" name="num">
+                        </div>
+
+                        <!-- 商品尺码 -->
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="请输入商品尺码" name="size">
+                        </div>
+
+                        <!-- 商品原价 -->
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="请输入商品原价" name="oldPrice">
+                        </div>
+
+                        <!-- 商品现价 -->
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="请输入商品现价" name="price">
+                        </div>
+                        <div class="form-group">
+                            <label class="btn btn-default" for="fileupload">上传图片</label>
+                            <input type="file" name="pic1" data-url="/product/addProductPic" id="fileupload" style="display: none;"
+                                multiple>
+                        </div>
+                        <div class="form-group" id="imgBox">
+                            <!-- <img src="images/default.png" width="100"> -->
+                            <!-- 图片地址 -->
+                            <input type="hidden" name="picStatus">
+                        </div>
+                        <div class="form-group">
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                                <button type="submit" class="btn btn-primary btn-sure">添加</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+
+
+
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+    <script type="text/html" id="tmp">
+        {{each rows v i}}
+        <tr class="text-center" style="vertical-align:middle">
+            <td>{{ (page-1)*size + (i+1) }}</td>
+            <td>{{ v.proName }}</td>
+            <td>{{ v.proDesc }}</td>
+            <td>{{ v.num }}</td>
+            <td>{{ v.size }}</td>
+            <td>{{ v.statu === 1 ? "已上架" : "已下架" }}</td>
+            <td>
+              {{ if v.statu === 1 }}
+                <button class="btn btn-danger">下架</button>
+              {{ else }}
+                <button class="btn btn-success">上架</button>
+              {{ /if }}
+            </td>
+          </tr>
+            {{/each}}
+    </script>
+
+    <script type="text/html" id="tmp1">
+        {{each rows v i}}
+        <li><a href="#" data-id="{{v.id}}">{{v.brandName}}</a></li>
+            {{/each}}
+    </script>
+
     <script src="lib/jquery/jquery.min.js"></script>
+    <script src="lib/jquery-fileupload/jquery.ui.widget.js"></script>
+    <script src="lib/jquery-fileupload/jquery.fileupload.js"></script>
     <script src="js/isLogin.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/nprogress/nprogress.js"></script>
+    <script src="lib/artTemplate/template-web.js"></script>
+    <script src="lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+    <script src="lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
     <script src="js/common.js"></script>
     <script src="js/index.js"></script>
+    <script>
+        $(function () {
+            var currentPage = 1;
+            var pageSize = 2;
+            render();
+            function render() {
+                $.ajax({
+                    url: '/product/queryProductDetailList',
+                    data: {
+                        page: currentPage,
+                        pageSize: pageSize
+                    },
+                    dataType: 'json',
+                    success: function (res) {
+                        // console.log(res);
+
+                        var htmlstr = template('tmp', res);
+                        $('tbody').html(htmlstr);
+
+                        $("#pagintor").bootstrapPaginator({
+                            bootstrapMajorVersion: 3,//默认是2，如果是bootstrap3版本，这个参数必填
+                            currentPage: currentPage,//当前页
+                            totalPages: Math.ceil(res.total / res.size),
+                            size: "small",//设置控件的大小，mini, small, normal,large
+                            onPageClicked: function (a, b, c, page) {
+                                currentPage = page;
+                                render();
+
+                            }
+                        });
+                    }
+                })
+            }
+
+            $('.btn-add').click(function () {
+                $('#addmodal').modal('show');
+                $.ajax({
+                    url: '/category/querySecondCategoryPaging',
+                    data: {
+                        page: 1,
+                        pageSize: 100
+                    },
+                    dataType: 'json',
+                    success: function (res) {
+                        console.log(res);
+
+                        var htmlstr = template('tmp1', res);
+                        $(".dropdown-menu").html(htmlstr);
+
+
+                    }
+                })
+            })
+
+            $('.dropdown-menu').on('click', 'a', function () {
+                var txt = $(this).text();
+                // console.log(txt);
+
+                // 拿到 categoryId
+                var id = $(this).data("id");
+
+                // 修改文本内容
+                $('#dropdownText').text(txt);
+                $('[name="brandId"]').val(id);
+
+                $('#form').data("bootstrapValidator").updateStatus("brandId", "VALID");
+            })
+
+            // 注册表单校验
+
+            $('#form').bootstrapValidator({
+                excluded: [],
+                feedbackIcons: {
+                    valid: 'glyphicon glyphicon-ok',
+                    invalid: 'glyphicon glyphicon-remove',
+                    validating: 'glyphicon glyphicon-refresh'
+                },
+
+
+
+
+                fields: {
+                    // 二级分类id, 归属品牌
+                    brandId: {
+                        validators: {
+                            notEmpty: {
+                                message: "请选择二级分类"
+                            }
+                        }
+                    },
+                    // 商品名称
+                    proName: {
+                        validators: {
+                            notEmpty: {
+                                message: "请输入商品名称"
+                            }
+                        }
+                    },
+                    // 商品描述
+                    proDesc: {
+                        validators: {
+                            notEmpty: {
+                                message: "请输入商品描述"
+                            }
+                        }
+                    },
+                    // 商品库存
+                    // 要求: 必须是非零开头的数字, 非零开头, 也就是只能以 1-9 开头
+                    // 数字: \d
+                    // + 表示一个或多个
+                    // * 表示零个或多个
+                    // ? 表示零个或1个
+                    // {n} 表示出现 n 次
+                    num: {
+                        validators: {
+                            notEmpty: {
+                                message: "请输入商品库存"
+                            },
+                            //正则校验
+                            regexp: {
+                                regexp: /^[1-9]\d*$/,
+                                message: '商品库存格式, 必须是非零开头的数字'
+                            }
+                        }
+                    },
+                    // 尺码校验, 规则必须是 32-40, 两个数字-两个数字
+                    size: {
+                        validators: {
+                            notEmpty: {
+                                message: "请输入商品尺码"
+                            },
+                            //正则校验
+                            regexp: {
+                                regexp: /^\d{2}-\d{2}$/,
+                                message: '尺码格式, 必须是 32-40'
+                            }
+                        }
+                    },
+                    // 商品价格
+                    price: {
+                        validators: {
+                            notEmpty: {
+                                message: "请输入商品价格"
+                            }
+                        }
+                    },
+                    // 商品原价
+                    oldPrice: {
+                        validators: {
+                            notEmpty: {
+                                message: "请输入商品原价"
+                            }
+                        }
+                    },
+                    // 标记图片是否上传满三张
+                    picStatus: {
+                        validators: {
+                            notEmpty: {
+                                message: "请上传3张图片"
+                            }
+                        }
+                    }
+                }
+
+            });
+
+            var arr = [];
+            $("#fileupload").fileupload({
+                dataType: "json",
+                //e：事件对象
+                //data：图片上传后的对象，通过data.result.picAddr可以获取上传后的图片地址
+                done: function (e, data) {
+                    // console.log(data);
+                    var res = data.result;
+                    $("#imgBox").prepend('<img src="' + res.picAddr + '" width="100"> ');
+                    arr.unshift(res.picAddr);
+                    if (arr.length > 3) {
+                        arr.pop();
+
+                        $("#imgBox img:last-of-type").remove();
+                    }
+                    if (arr.length == 3) {
+                        $('#form').data("bootstrapValidator").updateStatus("picStatus", "VALID");
+                    }
+                    // console.log(arr);
+
+
+
+
+                }
+            });
+
+
+            $('#form').on('success.form.bv', function (e) {
+                e.preventDefault();
+                var str = $('#form').serialize() + '&picArr=' + JSON.stringify(arr);
+                // console.log(str);
+
+                // 发ajax
+                $.ajax({
+                    url: '/product/addProduct',
+                    type: 'POST',
+                    data: str,
+                    success: function (res) {
+                        if (res.success) {
+                            $('#addmodal').modal('hide');
+                            currentPage = 1;
+                            render();
+                            $("#form").data('bootstrapValidator').resetForm(true);
+                            $("#imgBox img").remove();
+                            arr = [];
+                            $('#dropdownText').text("请选择2级分类");
+                        }
+
+                    }
+                })
+            })
+        })
+
+    </script>
 </body>
 
 </html>
